apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
            - name: mnt
              mountPath: /mnt
              mountPropagation: HostToContainer
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: data
          hostPath:
            path: /data
            type: Directory
        - name: mnt
          hostPath:
            path: /mnt
            type: Directory
